[package]
name = "esn-on-gba"
version = "0.1.0"
edition = "2021"

[dependencies]
gba = "0.14.1"
embedded-alloc = "0.5"
libm = "0.2.15"
reservoir-infer = { version = "0.1.0", default-features = false, features = ["libm"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["libm"] }
heapless = { version = "0.9.2", default-features = false, features = ["portable-atomic-critical-section"] }

[build-dependencies]
nalgebra = "0.33.2"
rand = "0.9.2"
reservoir-datasets = { version = "0.1.0", default-features = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
panic = "abort"
